Forms: re-add foreground and background color properties for widgets

Undo/redo works too.

BUG:267671